sharkey_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: sharkeysocial
  namespace: sharkeysocial
spec:
  ports:
  - port: 3000
    targetPort: 3000
    name: sharkeysocial
  selector:
    app: sharkeysocial
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: sharkeysocial
  namespace: sharkeysocial
spec:
  selector:
    matchLabels:
      app: sharkeysocial
  strategy:
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 33%
  replicas: 2
  template:
    metadata:
      labels:
        app: sharkeysocial
        env: prod
        sharkey: web
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - sharkeysocial
              topologyKey: "kubernetes.io/hostname"
      imagePullSecrets:
       - name: regcred
      containers:
      - image: registry.activitypub.software/transfem-org/sharkey:latest
        resources:
          requests:
            memory: "1024Mi"
            cpu: "200m"
          limits:
            memory: "2048Mi"
        name: sharkeysocial
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: sharkeysocial
        startupProbe:
          httpGet:
            path: /api/server-info
            port: sharkeysocial
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 24
        readinessProbe:
          httpGet:
            path: /api/server-info
            port: sharkeysocial
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /api/server-info
            port: sharkeysocial
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 12
        volumeMounts:
        - name: sharkeysocial-configmap
          mountPath: /sharkey/.config
      volumes:
      - name: sharkeysocial-configmap
        configMap:
          name: sharkeysocial 
---
